--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^24.2.3",
+    "i18next-resources-to-backend": "^1.2.1",
     "next": "15.2.2",
+    "next-i18n-router": "^5.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1"
