--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
+    "react-powerglitch": "^1.1.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
