adding a stepper to control animations (#6)
* adding a stepper to control animations

* fix: testing

---------

Co-authored-by: mauricio gallego <mauricio.gallego@yum.com>

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "framer-motion": "^12.7.4",
     "googleapis": "^148.0.0",
     "i18next": "^24.2.3",
     "i18next-resources-to-backend": "^1.2.1",
