--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.2.2",
     "next-i18n-router": "^5.5.1",
     "react": "^19.0.0",
+    "react-confetti-boom": "^1.1.2",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
