--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "type": "tsc --noEmit",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
