feat: add Vercel Analytics for improved tracking

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@leenguyen/react-flip-clock-countdown": "^1.6.1",
     "@radix-ui/react-select": "^2.2.5",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.7.4",
     "googleapis": "^148.0.0",
     "i18next": "^24.2.3",
