--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@leenguyen/react-flip-clock-countdown": "^1.6.1",
     "@radix-ui/react-select": "^2.2.5",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.7.4",
     "googleapis": "^148.0.0",
     "i18next": "^24.2.3",
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.511.0",
+    "mixpanel-browser": "^2.65.0",
     "next": "15.2.2",
     "next-i18n-router": "^5.5.1",
     "react": "^19.0.0",
