feature: setting restrictions

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mixpanel-browser": "^2.65.0",
     "next": "15.2.2",
     "next-i18n-router": "^5.5.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-confetti-boom": "^1.1.2",
     "react-dom": "^19.0.0",
